started index.html build

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <meta charset="UTF-8">
 
 <meta name="viewport" content="initial-scale=1.0, width=device-width">
-<title>Responsive Web Template</title>
+<title>Nova Studios</title>
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<h1 class="hidden">Nova Studios</h1>
+
 
 	<script src="js/main.js"></script>
 </body>
