--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
 <body>
 <h1 class="hidden">Nova Studios</h1>
 
+<div class="hero">
+	<header id="mainHeader">
+		<nav id="mainNav">
+		<h2 class="hidden">Main Navigation</h2>
+		<button id="button"></button>
+		<div id="burgerCon">
+			<ul id="burgerMenu">
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT</a></li>
+			<li><a href="contact.html">CONTACT</a></li>
+			<li><a href="portfolio.html">PORTFOLIO</a></li>
+			</ul>
+			
+		</div>
+		</nav>
+		<div id="logoCon">
+		<!-- <img src="" alt="Nova Studios Logo" id="logo"> -->
+		</div>
+	</header>
+</div>
+
 
 	<script src="js/main.js"></script>
 </body>
