updated nav section on index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 		<!-- <img src="" alt="Nova Studios Logo" id="logo"> -->
 		</div>
 	</header>
+
+	<div class="welcomeCon">
+		<h2 class="mainText">Lorem ipsum</h2>
+		<h3 class="tagline">This is our tagline</h3>
+	</div>
+
 </div>
 
 
