updated index.html finished footer section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
 </div>
 
 
+<footer>
+	<div class="location">
+		<img src="images/location.png" alt="Location Icon">
+		<h4 class="addres">1001 Wellington Street, London, Ontario</h4>
+	</div>
+
+	<h4 class="phone_number">1-187-278-2899</h4>
+
+	<div class="socialMedia">
+		<a href="#" class="socialIcon"><img src="images/facebook.png" alt="Facebook Logo"></a>
+		<a href="#" class="socialIcon"><img src="images/instagram.png" alt="Facebook Logo"></a>
+		<a href="#" class="socialIcon"><img src="images/git_hub.png" alt="Facebook Logo"></a>
+		<a href="#" class="socialIcon"><img src="images/behance.png" alt="Facebook Logo"></a>
+	</div>
+</footer>
+
 	<script src="js/main.js"></script>
 </body>
 </html>
