--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,32 @@
 		</div>
 	</header>
 
+<main class="contactPage">
+	<h1 class="hidden">Contact Page</h1>
+	<div class="infoCon">
+		<h2>Address</h2>
+			<div class="infoContent">
+				<img src="images/location.png" alt="Location Icon">
+				<h3>1001 Wellington Street, London, Ontario</h3>
+			</div>
+
+		
+			<h2>Let's Talk</h2>
+				<div class="infoContent">
+					<img src="images/telephone_icon.png" alt="Telefone Icon">
+					<h3>1-187-278-2889</h3>
+				</div>
+
+		
+			<h2>General Support</h2>
+				<div class="infoContent">
+					<img src="images/mail_icon.png" alt="Email Icon">
+					<h3>support@nova.ca</h3>
+				</div>
+
+
+	</div>
+
     <section class="contactCon">
         <h2 class="contactHeader">Contact Us</h2>
 
@@ -59,17 +85,17 @@
         </section>
     
     </section>
-
+</main>
 
 
 
 <footer>
 	<div class="location">
 		<img src="images/location.png" alt="Location Icon">
-		<h4 class="addres">1001 Wellington Street, London, Ontario</h4>
+		<h3 class="addres">1001 Wellington Street, London, Ontario</h3>
 	</div>
 
-	<h4 class="phone_number">1-187-278-2899</h4>
+	<h3 class="phone_number">1-187-278-2899</h3>
 
 	<div class="socialMedia">
 		<a href="#" class="socialIcon"><img src="images/facebook.png" alt="Facebook Logo"></a>
