--- a/about.html
+++ b/about.html
@@ -34,7 +34,16 @@
 
 
 
+    <h2 class="aboutHeader">NOVA</h2>
 
+    <p class="aboutDesc">Our main goal is to help you achieve yours by working together to create an effective digital strategy for your business.</p>
+
+    <video controls>
+        <source src="" type="video/mp4">
+        <source src="myVideo.webm" type="video/webm">
+        <p>Your browser doesn't support HTML5 video. Here is
+       a <a href="myVideo.mp4">link to the video</a> instead.</p>
+    </video>
 
 <footer>
 	<div class="location">
