--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
 <h1 class="hidden">Nova Studios</h1>
 
-
+<div class="aboutHero">
 	<header id="mainHeader">
 		<nav id="mainNav">
 		<h2 class="hidden">Main Navigation</h2>
@@ -32,9 +32,13 @@
 		</div>
 	</header>
 
+	<h2 class="aboutHeader">Nova Studios</h2>
 
+	<h3>We are a group of dedicated learners who share a<br> passion for all things digital. </h3>
 
-    <h2 class="aboutHeader">NOVA</h2>
+</div>
+
+    
 
     <p class="aboutDesc">Our main goal is to help you achieve yours by working together to create an effective digital strategy for your business.</p>
 
