added team photos

--- a/about.html
+++ b/about.html
@@ -47,7 +47,55 @@
         <source src="myVideo.webm" type="video/webm">
         <p>Your browser doesn't support HTML5 video. Here is
        a <a href="myVideo.mp4">link to the video</a> instead.</p>
-    </video>
+	</video>
+	
+
+	
+
+		<h2 class="teamHeader">Our Team</h2>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+			<span>labore, quo et aperiam voluptate beatae</span> </p>
+
+	<section class="teamCon">
+		<h3 class="hidden">Team Members</h3>
+		
+		<div class="team">
+			<div class="member">
+				<div class="tien">
+					<img src="images/tien.jpg" alt="Tien Photo">
+				</div>
+
+				<button>Tien</button>
+			</div>
+
+			<div class="member">
+					<div class="jimmy">
+							<img src="images/jimmy.jpg" alt="Jimmy Photo">
+					</div>
+
+					<button>Jimmy</button>
+
+			</div>
+		</div>
+
+		<div class="team">
+				<div class="member">
+					<div class="rayn">
+							<img src="images/rayn.jpg" alt="Sonali Photo">
+					</div>
+					<button>Rayn</button>
+				</div>
+
+				<div class="member">
+					<div class="rohit">
+
+					</div>
+					<button>Rohit</button>
+				</div>
+		</div>
+			
+	</section>
 
 <footer>
 	<div class="location">
