Added copy and content, made some changes to CSS

--- a/featurePage.html
+++ b/featurePage.html
@@ -33,21 +33,21 @@
 	</header>
 
 	<section class="featurePage">
-		<h2>The TRAA</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, nostrum. Nam repudiandae ea
-			 voluptatem voluptatum suscipit esse.
-		</p>
+		<h2>The TRAA Project</h2>
+		<p>The Thames River Anglers Association social media content.</p>
 
 		<img class="mockUp" src="images/traa_website.png" alt="TRAA Website">
 
 
-		<p class="fishermanParagraph">lora impsu At, nostrum. Nam repudiandae ea
-				voluptatem voluptatum suscipit esse.
+		<p class="fishermanParagraph">A reimagined Instagram layout with augmented design and essential,
+			 minimalistic content. We do our part on keeping your users up to date on 
+			 business with nothing but eye candy.
 		</p>
 
 		<img class="fisherman" src="images/fishing_man.png" alt="Fisher Man">
 
-		<h3>And we help you sell more</h3>
+		<h3>And we make you money doing it with classy, elegant designs
+			 for clothes, mugs - name it!</h3>
 		<img class="mugs" src="images/mugs.png" alt="Mugs Merchandising">
 	</section>
 
