--- a/portfolio.html
+++ b/portfolio.html
@@ -35,13 +35,14 @@
 <section class="portfolioPage">
 	<h2 class="hidden">Portfolio Page</h2>
 
-	<h2 class="portfolioHeader">Thames River Anglers Association Website and Campaing</h2>
-	<h3>We help create an grow bussines more than you think</h3>
+	<h2 class="portfolioHeader">Portfolio</h2>
+	<h3>Take a look at what we can do for you.</h3>
 	<a href="featurePage.html"><img class="traaImage" src="images/traa_background.jpg" alt="TRAA Image"></a>
 	
 	<a href="featurePage.html"><button>Visit The Website</button></a>
 
-	<h2>Couples Resorts Website</h2>
+	<p>We care about your business more than you think. 
+	<br>Let us help make your trade famous and look good doing it!</p>
 	<a href="featurePage.html"><img src="images/hotel.jpg" alt="Couples Resorts Image"></a>
 	<a href="featurePage.html"><button>Visit The Website</button></a>
 </section>
