--- a/about.html
+++ b/about.html
@@ -35,13 +35,14 @@
 
 	<h2 class="aboutHeader">Nova Studios</h2>
 
-	<h3>We are a group of dedicated learners who share a<br> passion for all the digital arts. </h3>
+	<h3>We are a group of enthusiastic designers and tech geniuses 
+		with a big imagination and a bigger influence. </h3>
 
 </div>
 
     
 
-    <p class="aboutDesc">Our main goal is to help you achieve yours by working together to create an effective digital strategy for your business.</p>
+    <p class="aboutDesc">Take a look at what we're all about.</p>
 
     <video controls>
         <source src="video/nova-video.mp4" type="video/mp4" >
@@ -59,11 +60,7 @@
 	</div>
 	
 
-		<h2 class="teamHeader">Our Team</h2>
-
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-			<span>labore, quo et aperiam voluptate beatae</span> </p>
-
+		<h2 class="teamHeader">Meet our team.</h2>
 	<section class="teamCon">
 		<h3 class="hidden">Team Members</h3>
 		
@@ -126,8 +123,8 @@
 				</div>
 
 				<div class="member">
-					<div class="rayn">
-							<img src="images/rayn.jpg" alt="Sonali Photo">
+					<div class="rohit">
+							<img src="images/rohit.jpg" alt="Rohit Photo">
 							<div class="lightbox" >
 									<span class="lightbox-close">X</span>
 									<h2 class="u-name"></h2>
