--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
 	<div class="welcomeCon">
 		<h2 class="mainText">Nova Studios</h2>
-		<h3 class="tagline">Nova in Innovation</h3>
+		<h3 class="tagline">Time to Evolve.</h3>
 
 
 		<p>We are a small advertising business based in London, Ontario with big ambitions.  
 			Let us help you take your brand identity to the next level digitally through social media marketing -
-			 the  biggest company promotion platform.</p>
+			 the biggest company promotion platform.</p>
 
 		<h3>After all, we bring the Nova in Innovation table.</h3>
 	</div>
@@ -47,8 +47,8 @@
 </div>
 
 <div class="hero2">
-		<h3>Looking to expand your business</h3>
-		<h3>You've hit Gold.</h3>
+		<h3>Looking to expand your business?</h3>
+		<h3>You've hit gold.</h3>
 	</div>
 
 
