--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
 		</div>
 	</header>
 
-	<h2 class="aboutHeader">Nova Studios</h2>
+	<h2 class="aboutHeader">We Are Nova Studios</h2>
 
-	<h3>We are a group of dedicated learners who share a<br> passion for all the digital arts. </h3>
+	<h3>We are a group of dedicated learners who share a passion for all the digital arts. </h3>
 
 </div>
 
@@ -61,8 +61,7 @@
 
 		<h2 class="teamHeader">Our Team</h2>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-			<span>labore, quo et aperiam voluptate beatae</span> </p>
+		<p>We are a group of enthusiastic designers and tech geniuses with a big imagination and a bigger influence. </p>
 
 	<section class="teamCon">
 		<h3 class="hidden">Team Members</h3>
