--- a/index.html
+++ b/index.html
@@ -41,15 +41,23 @@
 			Let us help you take your brand identity to the next level digitally through social media marketing -
 			 the  biggest company promotion platform.</p>
 
-		<h3>After all, we bring the Nova in Innovation table.</h3>
+		<h3 class="subHeading">After all, we bring the Nova in Innovation table.</h3>
 	</div>
 		
 </div>
 
 <div class="hero2">
-		<h3>Looking to expand your business</h3>
+		<h3>Looking to expand your business?</h3>
 		<h3>You've hit Gold.</h3>
 	</div>
+
+	<!-- <section class="partners">
+		<h3>Our Loyal Partners</h3>
+
+		<div class="partnerCon">
+			<img src="" alt="">
+		</div>
+	</section> -->
 
 
 
