--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,9 @@
 <section class="portfolioPage">
 	<h2 class="hidden">Portfolio Page</h2>
 
-	<h2 class="portfolioHeader">Thames River Anglers Association Website and Campaing</h2>
-	<h3>We help create an grow bussines more than you think</h3>
+	<h2 class="portfolioHeader">We care about your business more than think.
+		Let us help make your trade famous and look good doing it! </h2>
+	<h3>TRAA Campaing</h3>
 	<a href="featurePage.html"><img class="traaImage" src="images/traa_background.jpg" alt="TRAA Image"></a>
 	
 	<a href="featurePage.html"><button>Visit The Website</button></a>
